Bug 339923 - color range selector doesn't select color from specific hue range
Summary: color range selector doesn't select color from specific hue range
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL: http://i.imgur.com/E6vYgEG.png
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-13 09:13 UTC by Raghavendra kamath
Modified: 2017-09-30 10:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kra file of the colors that i was testing (873.89 KB, application/x-krita)
2014-10-13 09:14 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2014-10-13 09:13:05 UTC
I am a bit confused about how this works.
it doesn't select certain hues . 
Also among the selected pixels there is white background selected, as if the selection is grown by 2-3 pixels.

P.S. It would be great if we have some kind of documentation for this tool for beginners.

thank you

Reproducible: Always
Comment 1 Raghavendra kamath 2014-10-13 09:14:47 UTC
Created attachment 89108 [details]
kra file of the colors that i was testing

please find attached kra file
Comment 2 Raghavendra kamath 2014-10-13 09:26:58 UTC
Please ignore the white pixel problem. Wolthera explained the behavior to me on IRC - " The brush is also drawing very transparent red on a white background which becomes pink, and thus eligible for the red-color-range select"
Comment 3 Halla Rempt 2014-11-05 11:04:41 UTC
Yes, this dialog definitely seems to be broken. It used to work exactly like the photoshop colorrange dialog, way back in the prehistory when I first wrote it.
Comment 4 brusheco 2014-12-29 15:10:02 UTC
I was going to report this, but then I have seen this is already here. Just wanted to confirm that this happens on windows too, doesn't seem to work at all in most cases. I simply painted a blue stroke, and it wouldn't select that.
Comment 5 Halla Rempt 2017-09-30 10:52:41 UTC
Git commit aee4069aa2a9fd5de19796031c4ba11bd086ac47 by Boudewijn Rempt.
Committed on 30/09/2017 at 10:52.
Pushed by rempt into branch 'master'.

Reimplement the Select Color Range dialog

This removes the unimplemented "out of gamut" option, addes
a fuzziness slider and uses lcms for comparing to colors and
Lab for checking highlights, midtones and shadows.

M  +70   -131  plugins/extensions/colorrange/dlg_colorrange.cc
M  +140  -135  plugins/extensions/colorrange/wdg_colorrange.ui

https://commits.kde.org/krita/aee4069aa2a9fd5de19796031c4ba11bd086ac47
Comment 6 Halla Rempt 2017-09-30 10:52:56 UTC
Git commit 5f3516b5c65977361266365c30b1b34cc23a4411 by Boudewijn Rempt.
Committed on 30/09/2017 at 10:52.
Pushed by rempt into branch 'krita/3.3'.

Reimplement the Select Color Range dialog

This removes the unimplemented "out of gamut" option, addes
a fuzziness slider and uses lcms for comparing to colors and
Lab for checking highlights, midtones and shadows.

M  +70   -131  plugins/extensions/colorrange/dlg_colorrange.cc
M  +140  -135  plugins/extensions/colorrange/wdg_colorrange.ui

https://commits.kde.org/krita/5f3516b5c65977361266365c30b1b34cc23a4411