Reimplement the Select Color Range dialog

This removes the unimplemented "out of gamut" option, addes
a fuzziness slider and uses lcms for comparing to colors and
Lab for checking highlights, midtones and shadows.

BUG:339923